Fix: Remove VM Options